--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -1,3 +1,7 @@
+import pl.org.akai.buildsrc.Coil
+import pl.org.akai.buildsrc.ProtoDataStore
+import pl.org.akai.buildsrc.Serialization
+
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -48,6 +52,12 @@ dependencies {
     implementation Compose.navigation
     implementation Compose.viewModelCompose
     implementation Compose.activityCompose
+
+    implementation ProtoDataStore.protoDataStore
+    implementation Serialization.serialization
+    implementation ProtoDataStore.preferenceDataStore
+
+    implementation(Coil.coilCompose)
 
     kapt DaggerHilt.hiltCompiler
     implementation DaggerHilt.hiltAndroid
