game list screen

--- a/base-module.gradle
+++ b/base-module.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    kapt AndroidX.kaptAndroidXHiltCompiler
     kapt DaggerHilt.hiltCompiler
     implementation DaggerHilt.hiltAndroid
 
@@ -44,6 +45,7 @@ dependencies {
     implementation(pl.org.akai.buildsrc.Retrofit.retrofit)
     implementation(pl.org.akai.buildsrc.Retrofit.okHttpLoggingInterceptor)
     implementation(pl.org.akai.buildsrc.Retrofit.moshiConverter)
+    implementation(pl.org.akai.buildsrc.XmlConverter.simpleXmlConverter)
 
     kapt(pl.org.akai.buildsrc.Room.roomCompiler)
     implementation(pl.org.akai.buildsrc.Room.roomKtx)
