fixed response parsing

--- a/base-module.gradle
+++ b/base-module.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation(pl.org.akai.buildsrc.Retrofit.okHttpLoggingInterceptor)
     implementation(pl.org.akai.buildsrc.Retrofit.moshiConverter)
     implementation(pl.org.akai.buildsrc.XmlConverter.simpleXmlConverter)
+    implementation(pl.org.akai.buildsrc.Retrofit.gson)
 
     kapt(pl.org.akai.buildsrc.Room.roomCompiler)
     implementation(pl.org.akai.buildsrc.Room.roomKtx)
