--- a/compose-module.gradle
+++ b/compose-module.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation Compose.navigation
     implementation Compose.viewModelCompose
     implementation Compose.activityCompose
+    implementation Compose.lottieCompose
 
     implementation Serialization.serialization
 
